--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "manifest_version": 3,
-  "name": "FB Post Downloader",
+  "name": "Facebook Post Analyzer",
   "version": "1.2.3",
-  "description": "一鍵下載Facebook單篇貼文內容與留言,並自動下載圖片。",
+  "description": "用於分析 Facebook 貼文內容，並提供智能分析結果。該擴充功能使用 RAG (Retrieval-Augmented Generation) 技術來分析貼文內容，並在原始貼文中標記相關證據。",
   "permissions": ["scripting", "downloads", "activeTab"],
   "host_permissions": ["https://www.facebook.com/*"],
   "background": {
