Enhance Facebook Post Analyzer by adding functionality to display suspicious LINE IDs and URLs, along with a comprehensive risk assessment based on analysis results. Introduce a button for posting analysis comments directly to Facebook. Update the display logic to conditionally show additional content based on user preferences. Include mock data for testing suspicious item detection.

--- a/manifest.json
+++ b/manifest.json
@@ -23,5 +23,11 @@
       "js": ["content.js"],
       "run_at": "document_idle"
     }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": ["mockdata.json"],
+      "matches": ["https://www.facebook.com/*"]
+    }
   ]
 }
